Fix accordion sticky being broken by overflow: hidden on wrapper element

--- a/src/components/semantic/styles.module.css
+++ b/src/components/semantic/styles.module.css
@@ -1,5 +1,5 @@
 .outerWrapper {
-    overflow: hidden;
+    margin-bottom: 1em;
 }
 
 .box {
